Version 2.0 released to the public. Fixed the stop sound issue & more readable tooltip.

--- a/Dashcode Project/PrayTimeWidget.dcproj/project/widget.wdgt/Prayer Time.css
+++ b/Dashcode Project/PrayTimeWidget.dcproj/project/widget.wdgt/Prayer Time.css
@@ -22,6 +22,8 @@
 
 body {
     margin: 0px;
+    letter-spacing: 0px;
+    font-size: 16px;
 }
 
 #info {
